Some small tweaks

--- a/Twitter/Launch Screen.storyboard
+++ b/Twitter/Launch Screen.storyboard
@@ -16,12 +16,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" fixedFrame="YES" image="TwitterLogoBlue" translatesAutoresizingMaskIntoConstraints="NO" id="txE-8o-AEL">
-                                <rect key="frame" x="87" y="205" width="200" height="200"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="TwitterLogoBlue" translatesAutoresizingMaskIntoConstraints="NO" id="txE-8o-AEL">
+                                <rect key="frame" x="88" y="205" width="199" height="257"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="txE-8o-AEL" firstAttribute="top" secondItem="Bcu-3y-fUS" secondAttribute="top" constant="205" id="2Id-nR-OyJ"/>
+                            <constraint firstItem="txE-8o-AEL" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="2zg-kN-w9V"/>
+                            <constraint firstItem="txE-8o-AEL" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" constant="88" id="4Iw-jf-v74"/>
+                            <constraint firstItem="Bcu-3y-fUS" firstAttribute="trailing" secondItem="txE-8o-AEL" secondAttribute="trailing" constant="88" id="RZT-Tv-BNs"/>
+                            <constraint firstItem="txE-8o-AEL" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="vit-cr-pvO"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
                     </view>
                 </viewController>
